[java-decompiler] IJ-CR-119139 IDEA-326015 Support common cases of deconstruction in switch
 - add comments and delete suppressions

GitOrigin-RevId: a7a604e823edf51c4bda1deeee6c1c89b5abe2e5